- started to work on the latest version of paper